# deputy

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.codex/: instructions.md
.opencode/: opencode.json
agents/: automation-agent.md  ceo.md  cfo.md  client-site-builder.md  cmo.md  content-agent.md  coo.md  cto.md  distribution-agent.md  ea.md  fern-assembly.md  fern-asset-acquisition.md  fern-scene-agent.md  fern-script-voice.md  freelance-agent.md  kurz-asset-designer.md  kurz-scene-animator.md  kurz-voice-audio.md  market-intelligence.md  microtask-agent.md  outreach-agent.md  partner-acquisition.md  portfolio-monitor.md  quality-compliance.md  research-agent.md  seo-engineer.md  site-automation.md  site-builder-tech.md  video-director.md
config/: .env.example  docker-compose.yml  kpi-targets.json
crews/: __init__.py  automation_crew.py  content_crew.py  freelance_crew.py  outreach_crew.py  research_crew.py
docs/: SETUP_WIZARD.md  agents.md  self-improvement.md  setup.md  site-builder-system.md  video-production-system.md
orchestration/: __init__.py  checkpoint.py  graph.py  memory.py  state.py  supervisor.py
research/: __init__.py  academic.py  deep_research.py  evidence.py  github_scanner.py  report_compiler.py
scripts/: extract_hormozi.py  telegram-opencode-bridge.py
self_improve/: __init__.py  evaluator.py  lesson_extractor.py  memory_store.py  prompt_optimizer.py  reflection.py  skill_creator.py  skill_evolver.py  skill_manager.py  skill_retriever.py
tools/: __init__.py  content_publisher.py  earnings_tracker.py  (+4 more)
(+18 files in other folders)
