[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "income-system"
version = "1.0.0"
description = "Hierarchical multi-agent income automation system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "crewai>=0.105.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "weasyprint>=60.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=1.0.0",
    "pdfplumber>=0.11.0",
    "language-tool-python>=2.7.0",
    "lancedb>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
